# Blacktrianglecorp

./: .gitignore  CLAUDE_OPUS_PROMPT.md  DEPLOY.md  DESIGN.md  HDLX_VP.pine  README.md  WORK_PLAN.md
apps/web/: .env.example  README.md  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(auth)/: actions.ts
apps/web/app/admin/: actions.ts  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/risk-disclosure/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/components/admin/: admin-shell.tsx
apps/web/lib/: admin.ts  bybit.ts  crypto.ts  mock-data.ts  mode.ts  utils.ts
services/strategy-engine/: pyproject.toml
services/strategy-engine/btg_strategy/: __init__.py  types.py
services/strategy-engine/btg_strategy/indicators/: __init__.py  atr.py
services/strategy-engine/btg_strategy/profile/: __init__.py  classify.py  lvn_detect.py  volume_profile.py
services/strategy-engine/btg_strategy/signal/: __init__.py  cluster.py  evaluator.py  stops.py  targets.py  trigger.py
services/strategy-engine/scripts/: inspect_lvns.py
services/strategy-engine/tests/: conftest.py  test_atr.py  test_classify.py  test_cluster.py  test_evaluator.py  test_lvn_detect.py  test_stops.py  test_targets.py  test_trigger.py  test_volume_profile.py
supabase/: config.toml
supabase/migrations/: 0001_initial_schema.sql  0002_api_keys_app_encryption.sql  0003_admin_and_tiers.sql
(+29 files in other folders)
